--- a/chvck-theme/templates/article.html
+++ b/chvck-theme/templates/article.html
@@ -3,9 +3,10 @@
 {% block content %} 
 
   <article class="post">
-    <h2><a href="{{ SITEURL }}/{{ article.url }}">{{ article.title }}</a></h2>
-    <h3>Posted on {{ article.locale_date }}</h3>
-        
+    <div class="article-heading">
+		<h2><a href="{{ SITEURL }}/{{ article.url }}">{{ article.title }}</a></h2> - <h3>Posted on {{ article.locale_date }}</h3>
+	</div>
+
       {{ article.content }}	
         
       <h3 class="blogMeta"> Tags :
