--- a/chvck-theme/templates/index.html
+++ b/chvck-theme/templates/index.html
@@ -5,11 +5,13 @@
     {% for article in articles_page.object_list %}     
       <article class="summary">
 		  {% if  article.thumbnail %}
-			<a href="{{ SITEURL }}/{{ article.url }}"><img src="{{ article.thumbnail }}" class="summary"></a>
+		  <div class="thumb">
+			<a href="{{ SITEURL }}/{{ article.url }}"><img src="{{ article.thumbnail }}" alt="{{ article.altthumbnail }}" class="summary"></a>
+		  </div>
 		  {% endif %}
 
-          <h2><a href="{{ SITEURL }}/{{ article.url }}">{{ article.title }}</a></h2>
-          <h3>{{ article.locale_date }}</h3>
+          <h3><a href="{{ SITEURL }}/{{ article.url }}">{{ article.title }}</a></h2>
+          <h4>{{ article.locale_date }}</h3>
           <div class="article-summary">
             {{ article.summary }}
           </div>
@@ -23,7 +25,7 @@
   </div>
 
 	<div class="tag-cloud" id="tag-cloud">
-		<h3>Tags</h3>
+		<h3>All of the Tags</h3>
 		<ul>
 			{% for tag in tags %}
 			<li>
