--- a/chvck-theme/templates/base.html
+++ b/chvck-theme/templates/base.html
@@ -13,6 +13,7 @@
   <meta name="mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="black">
+  <meta name="keywords" content="bikes, riding, multiple-sclerosis">
   
   <title>{% block title %}{{ SITENAME }}{%endblock%}</title>
   <link href="{{ SITEURL }}/theme/css/style.css" rel="stylesheet" type="text/css" media="screen" />
@@ -71,7 +72,7 @@
   <div class="clearfloat"></div>
   
     <footer>
-      <p>Proudly powered by <a href="http://alexis.notmyidea.org/pelican/">pelican</a>, which takes great advantages of <a href="http://python.org">python</a>.
+      <p>Proudly powered by <a href="http://docs.getpelican.com/en/stable/">pelican</a>, which takes great advantages of <a href="http://python.org">python</a>.
     </footer><!-- end #footer -->
 </body>
 </html>
